--- a/lec_notes/notes.tex
+++ b/lec_notes/notes.tex
@@ -1,5 +1,5 @@
 
-\documentclass[doublespacing, draft]{brandeis}
+\documentclass[doublespacing]{brandeis}
 \usepackage{bm}
 \usepackage{url}
 \usepackage{tikz}
@@ -132,6 +132,6 @@
 % ---- Bibliography ----
 \providecommand\BIBentryALTinterwordstretchfactor{2.5}
 \bibliographystyle{wafr.bst}
-\bibliography{../../Papers/SRS/Continuum/biblio}
+\bibliography{../../Papers/SRS/Continuum/biblio,../../Papers/iDG/IROS18/root}
 
 \end{document}
