--- a/lec_notes/Brandeis.tex
+++ b/lec_notes/Brandeis.tex
@@ -1,5 +1,6 @@
 
-\documentclass[doublespacing]{brandeis}
+%\documentclass[doublespacing]{brandeis}
+\documentclass[doublespacing, draft]{brandeis}
 \usepackage{bm}
 \usepackage{url}
 \usepackage{tikz}
