local upenn computer

--- a/lec_notes/notes.tex
+++ b/lec_notes/notes.tex
@@ -1,5 +1,5 @@
 
-\documentclass[doublespacing, draft]{brandeis}
+\documentclass[doublespacing]{brandeis}
 \usepackage{bm}
 \usepackage{url}
 \usepackage{tikz}
