--- a/lec_notes/sections/motion_planning.tex
+++ b/lec_notes/sections/motion_planning.tex
@@ -13,7 +13,7 @@ As the field of studies in these areas are relatively new, there is no certain t
 %
 If you are having trouble downloading any of these materials, please email the instructor for an electronic copy.
 
-\subsection{Planning: Motion/Trajectory Planning}
+\section{Planning: Motion/Trajectory Planning}
 
 In robotics, by planning, we mean the task of automating mechanical or pneumatic systems with the capability for sensing, actuation, and computation abilities. In general, we want to have some sort of algorithm that converts a high-level description of a task to a lower-level one such that we can realize what we want in the real world. \textit{In control systems}, we often design local feedback laws that can act on the dynamics (an encoding of the behavior of the world) of the system so as to realize that which we desire to control. In executing these feedback control laws, we often need a sense of measure of the position and motion of objects in the environment. Typically, this is the sensing problem and it is typically achieved with a vision or tactile or tactile-vision sensor.  Together with the sensed position of the world, we are able to accurately execute an automation task as desired. In \textit{artificial intelligence}, the planning problem is a little loose. Here, the task might involve using discretizing a continuous state space, approximating a complex world with a microcosm of its model.   
 
