--- a/lec_notes/sections/robo_confs.tex
+++ b/lec_notes/sections/robo_confs.tex
@@ -48,7 +48,7 @@ The joints of a robot can be \textit{revolute} or \textit{prismatic}. Revolute j
  
  \subsection{Kinematic Geometries}
  %
- Kinematic geometry deals only with the \textit{displacements} of a system in the first and simplest segment of kinematics.  In general, the use of time as a variable is shunned upon since the displacements we intend to carry out may be performed as fast as user wishes in their implementation (to be seen in  \autoref{chap:statics}.  For the rest of this subsection, by kinematics, we shall mean the displacement of rigid bodies or ``the solid geometry of relatively moving bodies". 
+ Kinematic geometry deals only with the \textit{displacements} of a system in the first and simplest segment of kinematics.  In general, the use of time as a variable is shunned upon since the displacements we intend to carry out may be performed as fast as user wishes in their implementation.  For the rest of this subsection, by kinematics, we shall mean the displacement of rigid bodies or ``the solid geometry of relatively moving bodies". 
  
  The majority of robot arms (at least today) have their actuators (or joints) connected in series along an \textit{anthropomorphic} arm, with each joint being either at or associated with a single \dof in the robot arm. 
  %
@@ -116,9 +116,10 @@ Formally, we define a \textit{generalized parallel manipulator} as a closed-loop
 %
 \begin{figure}[tb!]
 	\centering
-	\emptybox{4cm}
-	%\includegraphics[width=\columnwidth, height=.5\columnwidth]{figures/kinematic_pair.png}
-	\caption{Insert Kinematic Pair Table here}
+	%\emptybox{4cm}
+	\includegraphics[width=.46\columnwidth, height=.5\columnwidth]{figures/kinematic_pair2.jpg}
+	\includegraphics[width=.46\columnwidth, height=.5\columnwidth]{figures/kinematic_pair.jpg}
+	\caption{The Lower Kinematic Pairs. Reprinted from \cite{HuntBook1977}.}
 	\label{fig:kinematic pair}
 \end{figure}
 
