brandeis homework sol

--- a/lec_notes/Brandeis.tex
+++ b/lec_notes/Brandeis.tex
@@ -90,7 +90,7 @@
 	{\end{verse}\vskip0pt plus2pt minus0pt}
 %
 %%% End of personal macro definitions.
-%%% The following definitions MUST come before the document begins.
+%%% The following definitionhttps://raw.githubusercontent.com/lakehanne/BrandeisNotes/master/lec_notes/def.tex?token=ACAKCJEHYDW72GOQJBSXI3K6GXPIMs MUST come before the document begins.
 %
 \author{RBOT250: Robot Motion Planning, Manipulation and Control \\
 	Instructor: Dr. Olalekan Ogunmolu}
