--- a/homeworks/hw1.tex
+++ b/homeworks/hw1.tex
@@ -32,7 +32,7 @@ Hence, the SCARA manipulator is a 3DOF robot.
 	\label{fig:para_mech}
 \end{figure}
 
-This robot has four RPRP-type kinematic chains. Three of these chains have their prismatic pair closest to the base; they serve as active joints. The fourth kinematic chain is completely passive.Points $B_1$ and $B_2$ are connected by a rod, which is perpendicular to the rod that connects points $B_2$ and $B_4$. Both rods ate connected to the moving platform by prismatic joints, which are separated from each other by a vertical offset $h$. Point $P = (P_x,P_y, P_z)$ is the interconnecting point for all the chains on the mobile platform and the top rods. Notice that the rotational axes of the revolute joints \ie, $\bm{\hat{u}}_i$ are parallel to the x-axes of joints 1 and 3; also, they are parallel to the z-axis for joints 2 and 4. 
+This robot has four RPRP-type kinematic chains. Three of these chains have their prismatic pair closest to the base; they serve as active joints. The fourth kinematic chain is completely passive. Points $B_1$ and $B_2$ are connected by a rod, which is perpendicular to the rod that connects points $B_2$ and $B_4$. Both rods are connected to the moving platform by prismatic joints, which are separated from each other by a vertical offset $h$. Point $P = (P_x,P_y, P_z)$ is the interconnecting point for all the chains on the mobile platform and the top rods. Notice that the rotational axes of the revolute joints \ie, $\bm{\hat{u}}_i$ are parallel to the x-axes of joints 1 and 3; also, they are parallel to the z-axis for joints 2 and 4. 
 
 There are many ways of solving this mobility problem. However, note that this mechanism has multiple closed loops and care must be taken when using the formulas we have introduced in our notes. Here, I will be using Gogu's method as proposed in ~\cite{Gogu}. It decomposes the mechanism into the different closed loops in order to properly analyze the mobility constraint. The mobility of the mechanism is 
 %
@@ -46,7 +46,7 @@ with $r$ being the number of joint parameters that lose independence after closi
 	r = \sum_{j=1}^{k}SH_j - SF  r_l
 \end{align}
 %
-where $k$ is the number of closed-loops in the mechanism, $SH_j$ is the connectivity of the $j-th$ closed loop $H_j$ when separated from  the mechanism; SF is the overall connectivity of the mechanism and $r_l$ is the total number of parameters that lose independence in the closed loops. We may find the variables as follows
+where $k$ is the number of closed-loops in the mechanism, $SH_j$ is the connectivity of the $j$'th closed loop $H_j$ when separated from  the mechanism; SF is the overall connectivity of the mechanism and $r_l$ is the total number of parameters that lose independence in the closed loops. We may find the variables as follows
 %
 \begin{align}
 	SH_j = \text{dim}(RH_j), \quad SF = \text{dim} (RF), \quad r_l = \sum_{j=1}^{k} r_l^{H_j}
@@ -66,12 +66,14 @@ with $SG_i^{H_j}, i = 1,2$ being the connectivity of $G_i^{H_j}$ in $H_j$, where
 %
 where $RG_i^{H_j}$ are the velocity vectors for $G_i^{H_j}$ and $RF_{H_j}$ is the resultant velocity vector formed by the intersection of the $RG_i^{H_j}$s.
 
-For this mechanism, we have $g=14$ and $k=2$; Furthermore, we have $RH_1 = \{v_x \, v_y \, v_z \, \omega_x\}$ and $RH_2 = \{v_x\, v_y \, v_z \}$ so that the loops' connectivity are $SH_1 = 4$ and $SH_2 = 4$. Hence $RF = RH_1 \cap RH_2 = \{v_x \, v_y \, v_z\}$ and the mechanism's connectivity is thus $SF = \text{dim} (RF) = 3$.
+For this mechanism, we have $g=14$ and $k=2$; furthermore, we have $RH_1 = \{v_x, \, v_y, \, v_z, \, \omega_x\}$ and $RH_2 = \{v_x,\, v_y, \, v_z \}$ so that the loops' connectivity are $SH_1 = 4$ and $SH_2 = 4$. Hence $RF = RH_1 \cap RH_2 = \{v_x, \, v_y, \, v_z\}$ and the mechanism's connectivity is thus $SF = \text{dim} (RF) = 3$.
 
-If we disconnect the limbs, the velocity vector of $RG_1^{H_1} = RG_2^{H_1} = \{v_x \, v_z \, \omega_x\}$ and $RG_1^{H_2} = RG_2^{H_2} = \{v_x \, v_y \omega_z \}$, so that the connectivity of each limb is $SG_{1,2}^{H_1} = SG_{1,2}^{H_2} = 3$. Thus,
+If we disconnect the limbs, the velocity vector of $RG_1^{H_1} = RG_2^{H_1} = \{v_x, \, v_z, \, \omega_x\}$ and $RG_1^{H_2} = RG_2^{H_2} = \{v_x, \, v_y, \omega_z \}$, so that the connectivity of each limb is $SG_{1,2}^{H_1} = SG_{1,2}^{H_2} = 3$. Thus,
 %
 \begin{align}
-	RF_{H_1} = RG_1^{H_1} \cap RG_2^{H_1} = \{ v_x \, v_z \, \omega_x\}, \quad RF_{H_2} = RG_1^{H_2} \cap RG_2^{H_2} = \{ v_x \, v_z \, \omega_z\}
+	RF_{H_1} &= RG_1^{H_1} \cap RG_2^{H_1} = \{ v_x \, v_z \, \omega_x\}, \nonumber \\
+	%
+	RF_{H_2} &= RG_1^{H_2} \cap RG_2^{H_2} = \{ v_x \, v_z \, \omega_z\}
 \end{align}
 %
 so that $SG_{H_1} = SF_{H_2} = 3$.
