--- a/homeworks/hw1sols.tex
+++ b/homeworks/hw1sols.tex
@@ -8,7 +8,7 @@
 \usepackage{pifont}
 \usepackage{booktabs}
 \usepackage{textcomp}
-%\usepackage{setspace}
+\usepackage{cite}
 \usepackage{footnote}
 \usepackage{verbatim}
 \usepackage{mathrsfs}
@@ -41,12 +41,19 @@
 \theoremstyle{remark}
 \newtheorem*{remark}{Remark}
 % correct bad hyphenation here
-\hyphenation{op-tical net-works semi-conduc-tor}
+%\hyphenation{op-tical net-works semi-conduc-tor}
 
 \addtolength{\textfloatsep}{-3mm}
 \addtolength{\floatsep}{-3mm}
 
 \pdfoutput=1    % for arxiv tex p
+
+\makeatletter
+\def\endthebibliography{%
+	\def\@noitemerr{\@latex@warning{Empty `thebibliography' environment}}%
+	\endlist
+}
+\makeatother
 
 \begin{document}
 	
@@ -60,6 +67,8 @@
 
 \input{hw1}
 
-%\bibliographystyle{IEEEtran}
-%\bibliography{../../Papers/SRS/Continuum/biblio}	
+% ---- Bibliography ----
+\providecommand\BIBentryALTinterwordstretchfactor{2.5}
+\bibliographystyle{IEEEtran}
+\bibliography{../../Papers/SRS/Continuum/biblio}	
 \end{document}	
